# opensmile

./: .gitignore  AUTHORS  CITING.txt  COPYING  CREDITS  ChangeLog  INSTALL  JULIUS_LICENSE  LICENSE.txt  Makefile.am  NEWS  README  README.md  RELEASE_NOTES  autogen.sh  buildAndroid.sh  buildStandalone.sh  buildWithInstalledPortAudio.sh  buildWithJulius.sh  buildWithPortAudio.sh  configure.ac  update_build_version.sh
config/: ComParE_2016.conf  ComParE_2016_core.func.conf.inc  ComParE_2016_core.lld.conf.inc  IS09_emotion.conf  IS09_emotion_core.lld.conf.inc  IS10_paraling.conf  IS10_paraling_compat.conf  IS10_paraling_core.func.conf.inc  IS10_paraling_core.lld.conf.inc  IS11_speaker_state.conf  IS12_speaker_trait.conf  IS12_speaker_trait_compat.conf  IS13_ComParE.conf  IS13_ComParE_Voc.conf  IS13_ComParE_core.func.conf.inc  IS13_ComParE_core.lld.conf.inc  MFCC12_0_D_A.conf  MFCC12_0_D_A_Z.conf  MFCC12_E_D_A.conf  MFCC12_E_D_A_Z.conf  PLP_0_D_A.conf  PLP_0_D_A_Z.conf  PLP_E_D_A.conf  PLP_E_D_A_Z.conf  arff_targets.conf  audspec.conf  audspec_compat.conf  avec2011.conf  avec2012.readme  avec2013.conf  avec2013_functionals_core.conf.inc  avec2013_lld_core.conf.inc  chroma_fft.conf  chroma_filt.conf  debugleveldump.inc.conf  emo_large.conf  emobase.conf  emobase2010.conf  emobase_live4.conf  emobase_live4_batch.conf  (+9 more)
config/audiovisual/: arff_targets_age.conf  audio.conf  audiovideo.conf  video.conf
config/demo/: audioplayer.conf  audiorecorder.conf  demo1_energy.conf  signalGenerator.conf
config/gemaps/: GeMAPSv01a.conf  GeMAPSv01a_core.func.conf.inc  GeMAPSv01a_core.lld.conf.inc  eGeMAPSv01a.conf  eGeMAPSv01a_core.func.conf.inc  eGeMAPSv01a_core.lld.conf.inc
config/gui/: visgui.conf  visgui_cepstr.conf  visgui_chroma.conf  visgui_melspec.conf  visgui_mfcc.conf  visgui_pitch.conf  visgui_semitone.conf  visgui_spect.conf
config/mediaeval2012_tum_affect/: MediaEval_Audio_IS12based_subwin2.conf  MediaEval_Audio_IS12based_subwin2_step0.5.conf  MediaEval_VideoFunctionals.conf  MediaEval_VideoFunctionals_subwin.conf
doc/: components.txt  configfile.txt  knownBugs.txt  logger.txt
doc/developer/: classes.txt  component_configuration.txt  dataMemory.txt  defines.txt  implementing_components.txt  messages.txt
ide/vs10/: generalProps.props  generalPropsDebug.props  generalPropsDll.props  lstmRnn.props  openSmile.sln  openSmile.vcproj  openSmile.vcxproj  openSmileComponents.props  openSmileLib.vcxproj  openSmileLibClassif.vcxproj  openSmileLibLibsvm.vcxproj  openSmileLibPortaudio.props  openSmileLibPortaudio.vcproj  openSmileLibPortaudio.vcxproj  openSmileLibPortaudio.vsprops  openSmilePlugin.sln  openSmilePlugin.vcproj  openSmilePluginGUI.sln  openSmilePluginGUI.vcproj  opencv.props  portaudio.def  portaudio.props  portaudio.vcxproj
m4/: android.m4  atklib.m4  find_pthread.m4  opencv.m4  portaudio.m4  qtlib.m4  rtnnllib.m4  semaineapi.m4  targets.m4
openSMILEbatchGUI/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form2.resx  openSMILEbatchGUI.csproj
openSMILEbatchGUI/Properties/: AssemblyInfo.cs
plugindev/: AUTHORS  COPYING  ClassifierResultGUI.cpp  ClassifierResultGUI.hpp  Makefile.am  README  autogen.sh  configure.ac  exampleGuipluginSink.cpp  exampleGuipluginSink.hpp  plug_exampleSink.cpp  plug_exampleSink.hpp  pluginGuiMain.cpp  pluginMain.cpp  simpleVisualiserGUI.cpp  simpleVisualiserGUI.hpp
plugindev/m4/: find_pthread.m4  opensmile.m4
progsrc/android-template/: README_SETUP.TXT  build.gradle
progsrc/openSMILEbatchGUI/: Form1.Designer.cs  Form1.cs
progsrc/semaine/: SEMAINExtract.cpp  TumAudioFeatureExtractor.cpp  TumEmotionAnalyser.cpp  TumFeatureExtractor.cpp  TumInterestDetector.cpp  TumKeywordSpotter.cpp  TumNonverbalFeatureExtractor.cpp  TumOpenSMILE.cpp  activeMqSink.cpp  activeMqSource.cpp  semaineEmmaSender.cpp  semaineEmotionSender.cpp  semaineNonverbalSender.cpp  semaineUserinfoSender.cpp  semaineWordSender.cpp
progsrc/smilextract/: SMILExtract.cpp
progsrc/tools/: compile_libsvmBinaryModelconverter.sh  libsvmBinaryModelconverter.cpp  modelmake.c
scripts/: arff_naninfzero_checker.pl  clonecomp.pl
scripts/avec2013/: avec2013_functionals.conf  avec2013_functionals_core.conf  avec2013_lld_core.conf  extractor_script.pl
scripts/gnuplot/: gpconvert.pl  gpframeconvert.pl  plotaudspec.sh  plotchroma.sh  plotcontour.gp  plotcontour.sh  plotframe.gp  plotframe.sh  plotmatrix.gp  plotmatrix.sh  plotmatrix_chroma.gp  plotmatrix_spec.gp  transpose.pl  transpose_lin.pl
scripts/modeltrain/: arff-standardize.c
scripts/vad/: README.txt  turnDetector.conf.inc  vad_opensource.conf  vad_opensource.conf.inc  vad_segmenter.conf
src/android/: jniMessageInterface.cpp  openslesSource.cpp
src/classifiers/: libsvmliveSink.cpp  svmSink.cpp
src/core/: commandlineParser.cpp  componentManager.cpp  configManager.cpp  dataMemory.cpp  dataProcessor.cpp  dataReader.cpp  dataSelector.cpp  dataSink.cpp  dataSource.cpp  dataWriter.cpp  exceptions.cpp  nullSink.cpp  smileCommon.cpp  smileComponent.cpp  smileLogger.cpp  vecToWinProcessor.cpp  vectorProcessor.cpp  vectorTransform.cpp  winToVecProcessor.cpp  windowProcessor.cpp
src/dsp/: dbA.cpp  signalGenerator.cpp  smileResample.cpp  specResample.cpp  specScale.cpp  vadV1.cpp
src/dspcore/: acf.cpp  amdf.cpp  contourSmoother.cpp  deltaRegression.cpp  fft4g.c  fftmagphase.cpp  fftsg.c  framer.cpp  fullinputMean.cpp  fullturnMean.cpp  monoMixdown.cpp  preemphasis.cpp  transformFft.cpp  transformFftr.cpp  turnDetector.cpp  vectorMVN.cpp  vectorPreemphasis.cpp  windower.cpp
src/examples/: componentTemplate.cpp  exampleProcessor.cpp  exampleSink.cpp  exampleSource.cpp  exampleVectorProcessor.cpp  exampleWindowProcessor.cpp  pitchBaseExample.cpp  simpleMessageSender.cpp  smileComponentExample.cpp
src/functionals/: functionalComponent.cpp  functionalCrossings.cpp  functionalDCT.cpp  functionalExtremes.cpp  functionalLpc.cpp  functionalMeans.cpp  functionalModulation.cpp  functionalMoments.cpp  functionalOnset.cpp  functionalPeaks.cpp  functionalPeaks2.cpp  functionalPercentiles.cpp  functionalRegression.cpp  (+4 more)
(+238 files in other folders)
